fix: update response get links by userId
